--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ version = "0.1.0"
 authors = ["Niklas Schöllhorn <schoellhorn.niklas@gmail.com>"]
 edition = "2018"
 
+[[test]]
+path = "src/test.rs"
+name = "tests"
+
 [dependencies]
 uuid = { version = "0.8", features = ["serde", "v4"] }
 linked-hash-map = "0.5.3"
